deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flipkart-ns

---

apiVersion: v1
kind: Namespace
metadata:
  name: amazon-ns
