deployment/amazon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-app-deployemnt
  namespace: amazon-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: amazon-app
  template:
    metadata:
      labels:
        app: amazon-app
    spec:
      containers:
        - name: amazon-app-container
          image: nrjydv1997/amazon:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: amazon-svc
  namespace: amazon-ns
spec:
  selector:
    app: amazon-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
