deployment/flipkart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-app-deployment
  namespace: flipkart-ns
spec:
  replias: 3
  selector:
    matchLabels:
      app: flipkart-app
  template:
    metadata:
      labels:
        app: flipkart-app
    spec:
      containers:
        - name: flipkart-app-container
          image: nrjydv1997/flipkart:latest
          ports:
            - containerPort: 80
          resources: 
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: flipkart-svc
  namespace: flipkart-ns
spec:
  selector:
    app: flipkart-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
